some additional writing plus a new render

--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -193,9 +193,11 @@ In the 2007 NLA, microcystin-LR concentrations ranged from `r min(nla_dat$MCYST_
 The association between Log 10 microcystin-LR and Log 10 chlorophyll *a* show a wedge pattern (Figure \ref{fig:chla_micro_scatter}).  This indicates that higher concentrations of microcystin-LR almost always co-occur with higher concentrations of chlorophyll *a* yet the inverse is not true.  Higher chlorophyll *a* is not necessarily predictive of higher microcystin-LR concentrations; however, chlorophyll *a* may be predictive of the probability of exceeding a certain concentration.  
 
 This is the case as the probability of exceeding each of the four tested health advisory levels increases as a function of chlorophyll *a* concentration (Figure \ref{fig:multi_cp_plot}).  We use this association to identify chlorophyll *a* concentrations that are associated with greater than even odds of exceeding a given health advisory level (Table \ref{tab:mc_chla_table}).  These represent `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[1]])/length(nla_dat$CHLA)),1)`%, `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[2]])/length(nla_dat$CHLA)),1)`%,
-`r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[3]])/length(nla_dat$CHLA)),1)`%, and `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[4]])/length(nla_dat$CHLA)),1)`% of sample lakes for the U.S EPA childrens drinking water, the WHO drinking water, the U.S. EPA Adult drinking water, and the WHO recreational standards, respecitvely.  
+`r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[3]])/length(nla_dat$CHLA)),1)`%, and `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[4]])/length(nla_dat$CHLA)),1)`% of sample lakes for the U.S EPA childrens drinking water, the WHO drinking water, the U.S. EPA Adult drinking water, and the WHO recreational advisories, respecitvely.  
 
-Furthermore, the chlorophyll *a* cutoffs may be used to predict whether or not a lake exceeds the microcystin-LR health advisories.  Doing so allows us to compare the accuracy of the prediction as well as evaluate false negatives in this prediction.  Stuff of FN plus presenation of conf matrix...
+Furthermore, the chlorophyll *a* cutoffs may be used to predict whether or not a lake exceeds the microcystin-LR health advisories.  Doing so allows us to compare the accuracy of the prediction as well as evaluate false negatives.  Total accuracy of the four cutoffs predicting microcystin-LR exceedances were `r total_accuracy$epa_child*100`% for the USEPA children's advisory, `r total_accuracy$who_drink*100`% for the WHO drinking water advisory,  `r total_accuracy$epa_adult*100`% for the USEPA adult advisory and, `r total_accuracy$who_rec*100`% for the WHO regreational advisory.  But Total Accuracy is one part of the prediction performace with which we are concerned.  
+
+When using the chlorophyll *a* cutoffs as an indicator of microcystin-LR exceedances, the error that should be avoided is predicting that no exceedance has occurred when in fact it has.  In other words, we would like to avoid Type II errors and minimize the proportion of false negatives [REF].  For the four chlorophyll *a* cut-offs we had a proportion of false negatives of `r fn_percent$epa_child*100`, `r fn_percent$who_drink*100`, `r fn_percent$epa_adult*100` and , `r fn_percent$who_rec*100 for the U.S EPA childrens drinking water, the WHO drinking water, the U.S. EPA Adult drinking water, and the WHO recreational advisories, respecitvely.  In each case we miss less than 10% of the lakes that are in fact exceeding the microcystin-LR advisory.  This is an acceptable rate, especially when no other tests are available for a given water body.  TEST LOWER VALUES to see where we can get it even lower.
 
 There are numerous possible uses for the chlorophyll *a* and microcystin-LR advisory cut-off values.  First, in the absence of microcystin-LR measurements, exceedence of the chlorophyll *a* concentrations could be a trigger for further actions.  Given that there is uncertainity around these chlorophyll *a* cutoffs the best case scenario would be to monitor for chlorophyll and in the event of exceeding a target concentration take water samples and have those samples tested in a lab for microcystin-LR.  A second potential use is to identify possible bloom events from historical data.  As harmful algal blooms are made up of many species and have various mechanism responsible for adverse impacts (e.g. toxins, hypoxia, odors), there is no single definition of a bloom.  For cHABs one approach has been to identify an increase over a baseline concentration of phycocyanin [@miller2013spatiotemporal].  This is a useful approach for targeted studies, but phycocyanin is also not always available and measures the predominance of cyanobacterial pigments and not toxins. Using our chlorophyll *a* cutoffs provides a value that is more directly associated with microcystin-LR and can be used to classify lakes, from past surveys, as having bloomed.  
 
