first complete draft (with holes) and render

--- a/manuscript/components/manuscript.bib
+++ b/manuscript/components/manuscript.bib
@@ -1,3 +1,14 @@
+@article{marion2012vivo,
+  title={In vivo phycocyanin flourometry as a potential rapid screening tool for predicting elevated microcystin concentrations at eutrophic lakes},
+  author={Marion, Jason W and Lee, Jiyoung and Wilkins III, JR and Lemeshow, Stanley and Lee, Cheonghoon and Waletzko, Evan J and Buckley, Timothy J},
+  journal={Environmental science \& technology},
+  volume={46},
+  number={8},
+  pages={4523--4531},
+  year={2012},
+  publisher={ACS Publications}
+}
+
 @article{paerl2013harmful,
   title={Harmful cyanobacterial blooms: causes, consequences, and controls},
   author={Paerl, Hans W and Otten, Timothy G},
