--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -150,9 +150,6 @@ fn_percent$epa_adult<-round((adult_conmat[1,2])/
 fn_percent$who_rec<-round((who_rec_conmat[1,2])/
   sum(who_rec_conmat),2)
 
-#Want to minimize false negatives.  Ratio of FN/FP+TP+TN
-
-#mc_chla[7] <- get_chla(who_rec_med2_cp,0.5)
 ```
 
 
@@ -168,7 +165,7 @@ Cyanobacteria harmful algal blooms (cHABs) are associated with a wide range of a
 
 #Introduction
 
-In the summer of 2014, the city of Toledo, OH was forced to shut down their municipal water supply due in part to an excess of microcystin-LR that resulted from a ongoing cyanobacteria harmful algal bloom (cHAB) in Lake Erie [@jetoo2015toledo; @rinta2009lake].  Since this event, significant legislation has been passed in the United States and the US Environmental Protection Agency (USEPA) has released suggested microcystin-LR (one of the more common toxins) concentrations that would trigger health advisories [@mcelhiney2005detection; @zurawell2005hepatotoxic].  MORE ON THE LEVELS. While these levels and associated advisories are likely to help mitigate the impacts from harmful algal blooms, they are not without complications.  
+Over the last decade or so numerous events and legislative activities have raised the public awareness of harmful algal blooms [@jetoo2015toledo; @rinta2009lake; NEED HABHRCA REFS].  Recent, the US Environmental Protection Agency (USEPA) has released suggested microcystin-LR (one of the more common toxins) concentrations that would trigger health advisories [@mcelhiney2005detection; @zurawell2005hepatotoxic].  Additionally, the World Health Organization (WHO) has had proposed advisory levels for drinking water and a range of recreational risk levels [REF].   While these levels and associated advisories are likely to help mitigate the impacts from harmful algal blooms, they are not without complications.  
 
 One of these complications is that they rely on available measurements of microcystin-LR.  While laboratory testing remains the gold standard for quantifying microcystin-LY concentrations in water samples, several field test kits have been developed.  Even though field tests provide a much needed means for rapid assessment, they are infrequently available to lake managers.  These kits are moderately expensive (approximately $150-$200 depending on specific kit) with a limited shelf life (typically one year) [@james2011environmental; @aranda2015evaluation].  Additionally, each technique requires nuanced understanding of the detection method (e.g., limit of detection, specific microcystin variants being measured, and sampling protocol).    Fortunately, microcystin-LR has been shown to be associated with several other, more commonly measured and understood components of water quality.
 
@@ -197,13 +194,11 @@ This is the case as the probability of exceeding each of the four tested health 
 
 Furthermore, the chlorophyll *a* cutoffs may be used to predict whether or not a lake exceeds the microcystin-LR health advisories.  Doing so allows us to compare the accuracy of the prediction as well as evaluate false negatives.  Total accuracy of the four cutoffs predicting microcystin-LR exceedances were `r total_accuracy$epa_child*100`% for the USEPA children's advisory, `r total_accuracy$who_drink*100`% for the WHO drinking water advisory,  `r total_accuracy$epa_adult*100`% for the USEPA adult advisory and, `r total_accuracy$who_rec*100`% for the WHO regreational advisory.  But Total Accuracy is one part of the prediction performace with which we are concerned.  
 
-When using the chlorophyll *a* cutoffs as an indicator of microcystin-LR exceedances, the error that should be avoided is predicting that no exceedance has occurred when in fact it has.  In other words, we would like to avoid Type II errors and minimize the proportion of false negatives [REF].  For the four chlorophyll *a* cut-offs we had a proportion of false negatives of `r fn_percent$epa_child*100`, `r fn_percent$who_drink*100`, `r fn_percent$epa_adult*100` and , `r fn_percent$who_rec*100 for the U.S EPA childrens drinking water, the WHO drinking water, the U.S. EPA Adult drinking water, and the WHO recreational advisories, respecitvely.  In each case we miss less than 10% of the lakes that are in fact exceeding the microcystin-LR advisory.  This is an acceptable rate, especially when no other tests are available for a given water body.  TEST LOWER VALUES to see where we can get it even lower.
+When using the chlorophyll *a* cutoffs as an indicator of microcystin-LR exceedances, the error that should be avoided is predicting that no exceedance has occurred when in fact it has.  In other words, we would like to avoid Type II errors and minimize the proportion of false negatives [REF].  For the four chlorophyll *a* cut-offs we had a proportion of false negatives of `r fn_percent$epa_child*100`, `r fn_percent$who_drink*100`, `r fn_percent$epa_adult*100` and , `r fn_percent$who_rec*100 for the U.S EPA childrens drinking water, the WHO drinking water, the U.S. EPA Adult drinking water, and the WHO recreational advisories, respecitvely.  In each case we miss less than 10% of the lakes that are in fact exceeding the microcystin-LR advisory.  This is an acceptable rate, especially when no other tests are available for a given water body. 
 
 There are numerous possible uses for the chlorophyll *a* and microcystin-LR advisory cut-off values.  First, in the absence of microcystin-LR measurements, exceedence of the chlorophyll *a* concentrations could be a trigger for further actions.  Given that there is uncertainity around these chlorophyll *a* cutoffs the best case scenario would be to monitor for chlorophyll and in the event of exceeding a target concentration take water samples and have those samples tested in a lab for microcystin-LR.  A second potential use is to identify possible bloom events from historical data.  As harmful algal blooms are made up of many species and have various mechanism responsible for adverse impacts (e.g. toxins, hypoxia, odors), there is no single definition of a bloom.  For cHABs one approach has been to identify an increase over a baseline concentration of phycocyanin [@miller2013spatiotemporal].  This is a useful approach for targeted studies, but phycocyanin is also not always available and measures the predominance of cyanobacterial pigments and not toxins. Using our chlorophyll *a* cutoffs provides a value that is more directly associated with microcystin-LR and can be used to classify lakes, from past surveys, as having bloomed.  
 
-These values are conservative: greater than even odds for the upper CI. Most protective.  
-
-Not meant as a replacement for testing of microcystin, but provides another useful tool to help understand the probable extent of microcystin occurence.  
+Lastly, using chlorophyll *a* is not meant as a replacement for testing of microcystin-LR.  It should be used when other, direct measurements of cyanotoxins are not available.  In those cases, which are likely to be common at least in the near future, using a more ubiquitous meausrement, such as chlorophyll *a* will provide a reasonable proxy for the probability of exceeding a microcystin-LR health advisory level and provide better protection against adverse effects in both drinking and recreational use cases. 
 
 \newpage
 
