--- a/manuscript/components/manuscript.bib
+++ b/manuscript/components/manuscript.bib
@@ -1,3 +1,43 @@
+@misc{usepa2015drinking,
+  title={Drinking Water Health Advisory for the Cyanobacterial Microcystin Toxins.  EPA-820R15100},
+  author={USEPA},
+  year={2015},
+  publisher={Office of Water, US Environmental Protection Agency Washington, DC},
+  url={http://www2.epa.gov/sites/production/files/2015-06/documents/microcystins-report-2015.pdf}
+}
+
+@article{chorus1999toxic,
+  title={Toxic cyanobacteria in water: a guide to their public health consequences, monitoring and management},
+  author={Chorus, Edited Ingrid and Bartram, Jamie},
+  year={1999},
+  publisher={Citeseer}
+}
+
+@article{world2003cyanobacterial,
+  title={Cyanobacterial toxins: microcystin-LR in drinking-water. Background document for development of WHO Guidelines for Drinking-water Quality. Geneva, Switzerland},
+  author={World Health Organization (WHO) and others},
+  journal={World Health Organization, 2nd ed. Geneva},
+  year={2003}
+}
+
+@article{heisler2008eutrophication,
+  title={Eutrophication and harmful algal blooms: a scientific consensus},
+  author={Heisler, John and Glibert, Patricia M and Burkholder, JoAnn M and Anderson, Donald M and Cochlan, William and Dennison, William C and Dortch, Quay and Gobler, Christopher J and Heil, Cynthia A and Humphries, Edythe and others},
+  journal={Harmful algae},
+  volume={8},
+  number={1},
+  pages={3--13},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@misc{HABHRCA2014,
+  title={Harmful Algal Bloom and Hypoxia Research and Control Amendments Act of 2014},
+  author={HABHRCA},
+  year={2014},
+  url={https://www.congress.gov/113/bills/s1254/BILLS-113s1254enr.pdf}
+  }
+
 @article{marion2012vivo,
   title={In vivo phycocyanin flourometry as a potential rapid screening tool for predicting elevated microcystin concentrations at eutrophic lakes},
   author={Marion, Jason W and Lee, Jiyoung and Wilkins III, JR and Lemeshow, Stanley and Lee, Cheonghoon and Waletzko, Evan J and Buckley, Timothy J},
