--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -165,21 +165,21 @@ Cyanobacteria harmful algal blooms (cHABs) are associated with a wide range of a
 
 #Introduction
 
-Over the last decade or so numerous events and legislative activities have raised the public awareness of harmful algal blooms [@jetoo2015toledo; @rinta2009lake; NEED HABHRCA REFS].  Recent, the US Environmental Protection Agency (USEPA) has released suggested microcystin-LR (one of the more common toxins) concentrations that would trigger health advisories [@mcelhiney2005detection; @zurawell2005hepatotoxic].  Additionally, the World Health Organization (WHO) has had proposed advisory levels for drinking water and a range of recreational risk levels [REF].   While these levels and associated advisories are likely to help mitigate the impacts from harmful algal blooms, they are not without complications.  
+Over the last decade or so numerous events and legislative activities have raised the public awareness of harmful algal blooms [@jetoo2015toledo; @rinta2009lake; @HABHRCA2014].  Recently, the US Environmental Protection Agency (USEPA) has released suggested microcystin-LR (one of the more common toxins) concentrations that would trigger health advisories [@mcelhiney2005detection; @zurawell2005hepatotoxic; @usepa2015drinking].  Additionally, the World Health Organization (WHO) has had proposed advisory levels for drinking water and a range of recreational risk levels [@world2003cyanobacterial; @chorus1999toxic].   While these levels and associated advisories are likely to help mitigate the impacts from harmful algal blooms, they are not without complications.  
 
 One of these complications is that they rely on available measurements of microcystin-LR.  While laboratory testing remains the gold standard for quantifying microcystin-LY concentrations in water samples, several field test kits have been developed.  Even though field tests provide a much needed means for rapid assessment, they are infrequently available to lake managers.  These kits are moderately expensive (approximately $150-$200 depending on specific kit) with a limited shelf life (typically one year) [@james2011environmental; @aranda2015evaluation].  Additionally, each technique requires nuanced understanding of the detection method (e.g., limit of detection, specific microcystin variants being measured, and sampling protocol).    Fortunately, microcystin-LR has been shown to be associated with several other, more commonly measured and understood components of water quality.
 
-Chlorophyll *a* is a very commonly measured components of water quality that is also known to be associated with Microsystin-LR concentrations [@lee2000variation, @paerl2013harmful].  Additionally there are many rapid measurements for assessing chlorophyll *a* levels *in situ*.  For instance, there are small or hand held flourometers that provide reliable measurements [REFS].   Given these facts, it might be possible to identify chlorophyll *a* concentrations that would be associated with the various Microcystin-LR health advisory levels.  Identifying these associations would provide another reliable tool for water resource managers to use to help manage the threat to public health posed by cHABs and would be especially useful in the absence of microcystin-LR concentrations.  Thus, the goal of this paper is to utlize the National Lakes Assessment data and identify chlorophyll *a* concentrations that are associated with higher probabilities of exceeding several microcystin-LR health advisory concentrations [NLA REF].  So that others may repeat or adjust this analysis, the data, code, and this manuscript are freely available via [https://github.com/USAPE/microcystinchla](https://github.com/USAPE/microcystinchla).
+Chlorophyll *a* is a very commonly measured components of water quality that is also known to be associated with Microsystin-LR concentrations [@lee2000variation; @paerl2013harmful; heisler2008eutrophication].  Additionally there are many rapid measurements for assessing chlorophyll *a* levels *in situ*.  For instance, there are small or hand held flourometers that measure chlorohpyll *a*.   Given these facts, it might be possible to identify chlorophyll *a* concentrations that would be associated with the various Microcystin-LR health advisory levels.  Identifying these associations would provide another reliable tool for water resource managers to use to help manage the threat to public health posed by cHABs and would be especially useful in the absence of microcystin-LR concentrations.  Thus, the goal of this paper is to utlize the National Lakes Assessment data and identify chlorophyll *a* concentrations that are associated with higher probabilities of exceeding several microcystin-LR health advisory concentrations [@usepa2009national].  So that others may repeat or adjust this analysis, the data, code, and this manuscript are freely available via [https://github.com/USAPE/microcystinchla](https://github.com/USAPE/microcystinchla).
 
 #Methods
 
 ##Data
-We used the 2007 National Lakes Assessment (NLA) water quality and microcystin-LR concentration data [REF]. These data represent a snapshot of water quality from the summer of 2007 and data on chlorophyll *a* and microcystin-LR concentrations are available for `r nrow(na.omit(nla_dat$CHLA,nla_dat$MCYST_TL_UGL))` lakes.  
+We used the 2007 National Lakes Assessment (NLA) water quality and microcystin-LR concentration data [@usepa2009national]. These data represent a snapshot of water quality from the summer of 2007 and data on chlorophyll *a* and microcystin-LR concentrations are available for `r nrow(na.omit(nla_dat$CHLA,nla_dat$MCYST_TL_UGL))` lakes.  
 
 ##Conditional Probability Analysis
 We used a conditional probability analysis (CPA) approach to explore associations between chlorophyll *a* concentrations  and World Health Organization (WHO) and U.S. Environmental Protection Agency (U.S. EPA) microcystin-LR health advisory levels [@paul2011probability].  Many levels have been suggested (Table \ref{tab:microcystin_levels}), but lakes with higher microcystin-LR concentrations in the NLA were rare. Only `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=10])/nrow(nla_dat)),2)` % of lakes sampled had a concentration greater than 10.  Thus, for this analysis we focus on the microcystin concentrations that are better represented in the NLA data. These were  0.3, 1, 1.6, and 2 $\mu$g/L.
 
-A detailed discussion of CPA is beyond the scope of this paper, but see Paul et al. [-REF] and Hollister et al. [-REF] for details.  For this analysis, we used CPA to examine how the conditional probability of exceeding one of the health advisory changes as chlorophyll *a* increases in a lake.  The 95% confidence intervals were calculated from 1000 bootstrapped samples. To identify chlorophyll *a* concentrations of concern we used a 50% conditional probability of exceeding each health advisory level and extracted the minimum chlorophyll *a* concentration that was associated with the upper confidence level being 50% or greater.  As both microcystin-LR and chlorophyll *a* values were both highely skewed right, a log base 10 transformation was used.  Additional details of the specific implementation are available at https://github.com/USEPA/microcystinchla.
+A detailed discussion of CPA is beyond the scope of this paper, but see Paul et al. [-@paul2005development] and Hollister et al. [-@hollister2008cprob] for details.  For this analysis, we used CPA to examine how the conditional probability of exceeding one of the health advisory changes as chlorophyll *a* increases in a lake.  The 95% confidence intervals were calculated from 1000 bootstrapped samples. To identify chlorophyll *a* concentrations of concern we used a 50% conditional probability of exceeding each health advisory level and extracted the minimum chlorophyll *a* concentration that was associated with the upper confidence level being 50% or greater.  As both microcystin-LR and chlorophyll *a* values were both highely skewed right, a log base 10 transformation was used.  Additional details of the specific implementation are available at https://github.com/USEPA/microcystinchla.
 
 #Results
 
@@ -192,9 +192,9 @@ The association between Log 10 microcystin-LR and Log 10 chlorophyll *a* show a 
 This is the case as the probability of exceeding each of the four tested health advisory levels increases as a function of chlorophyll *a* concentration (Figure \ref{fig:multi_cp_plot}).  We use this association to identify chlorophyll *a* concentrations that are associated with greater than even odds of exceeding a given health advisory level (Table \ref{tab:mc_chla_table}).  These represent `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[1]])/length(nla_dat$CHLA)),1)`%, `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[2]])/length(nla_dat$CHLA)),1)`%,
 `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[3]])/length(nla_dat$CHLA)),1)`%, and `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[4]])/length(nla_dat$CHLA)),1)`% of sample lakes for the U.S EPA childrens drinking water, the WHO drinking water, the U.S. EPA Adult drinking water, and the WHO recreational advisories, respecitvely.  
 
-Furthermore, the chlorophyll *a* cutoffs may be used to predict whether or not a lake exceeds the microcystin-LR health advisories.  Doing so allows us to compare the accuracy of the prediction as well as evaluate false negatives.  Total accuracy of the four cutoffs predicting microcystin-LR exceedances were `r total_accuracy$epa_child*100`% for the USEPA children's advisory, `r total_accuracy$who_drink*100`% for the WHO drinking water advisory,  `r total_accuracy$epa_adult*100`% for the USEPA adult advisory and, `r total_accuracy$who_rec*100`% for the WHO regreational advisory.  But Total Accuracy is one part of the prediction performace with which we are concerned.  
+Furthermore, the chlorophyll *a* cutoffs may be used to predict whether or not a lake exceeds the microcystin-LR health advisories.  Doing so allows us to compare the accuracy of the prediction as well as evaluate false negatives.  Total accuracy of the four cutoffs predicting microcystin-LR exceedances were `r total_accuracy$epa_child*100`% for the USEPA children's advisory, `r total_accuracy$who_drink*100`% for the WHO drinking water advisory,  `r total_accuracy$epa_adult*100`% for the USEPA adult advisory and, `r total_accuracy$who_rec*100`% for the WHO regreational advisory (Tables \ref{tab:child_conmat_table}, \ref{tab:who_drink_conmat_table}, \ref{tab:adult_conmat_table}, & \ref{tab:who_rec_conmat_table}).  But Total Accuracy is one part of the prediction performace with which we are concerned.  
 
-When using the chlorophyll *a* cutoffs as an indicator of microcystin-LR exceedances, the error that should be avoided is predicting that no exceedance has occurred when in fact it has.  In other words, we would like to avoid Type II errors and minimize the proportion of false negatives [REF].  For the four chlorophyll *a* cut-offs we had a proportion of false negatives of `r fn_percent$epa_child*100`, `r fn_percent$who_drink*100`, `r fn_percent$epa_adult*100` and , `r fn_percent$who_rec*100 for the U.S EPA childrens drinking water, the WHO drinking water, the U.S. EPA Adult drinking water, and the WHO recreational advisories, respecitvely.  In each case we miss less than 10% of the lakes that are in fact exceeding the microcystin-LR advisory.  This is an acceptable rate, especially when no other tests are available for a given water body. 
+When using the chlorophyll *a* cutoffs as an indicator of microcystin-LR exceedances, the error that should be avoided is predicting that no exceedance has occurred when in fact it has.  In other words, we would like to avoid Type II errors and minimize the proportion of false negatives.  For the four chlorophyll *a* cut-offs we had a proportion of false negatives of `r fn_percent$epa_child*100`%, `r fn_percent$who_drink*100`%, `r fn_percent$epa_adult*100`% and , `r fn_percent$who_rec*100`% for the U.S EPA childrens drinking water, the WHO drinking water, the U.S. EPA Adult drinking water, and the WHO recreational advisories, respecitvely.  In each case we miss less than 10% of the lakes that are in fact exceeding the microcystin-LR advisory.  This is an acceptable rate, especially when no other tests are available for a given water body. 
 
 There are numerous possible uses for the chlorophyll *a* and microcystin-LR advisory cut-off values.  First, in the absence of microcystin-LR measurements, exceedence of the chlorophyll *a* concentrations could be a trigger for further actions.  Given that there is uncertainity around these chlorophyll *a* cutoffs the best case scenario would be to monitor for chlorophyll and in the event of exceeding a target concentration take water samples and have those samples tested in a lab for microcystin-LR.  A second potential use is to identify possible bloom events from historical data.  As harmful algal blooms are made up of many species and have various mechanism responsible for adverse impacts (e.g. toxins, hypoxia, odors), there is no single definition of a bloom.  For cHABs one approach has been to identify an increase over a baseline concentration of phycocyanin [@miller2013spatiotemporal].  This is a useful approach for targeted studies, but phycocyanin is also not always available and measures the predominance of cyanobacterial pigments and not toxins. Using our chlorophyll *a* cutoffs provides a value that is more directly associated with microcystin-LR and can be used to classify lakes, from past surveys, as having bloomed.  
 
@@ -283,6 +283,30 @@ knitr::kable(mc_conc_table)
 mc_chla_tbl <- data.frame(Source=mc_names,Type=mc_type,Microcystin=mc_guides,Chlorophyll=mc_chla)[1:4,]
 #pandoc.table(mc_chla_tbl,justify = "left" ,split.table = 120, split.cells  = c(20,20,20))
 knitr::kable(mc_chla_tbl)
+```
+
+\newpage
+
+```{r child_conmat_table, results='asis', echo=FALSE, tab.cap="Confusion matrix comparing chlorophyll \\textit{a} predicted exceedences (rows) versus real exceedances (columns) for the U.S. EPA childrens drinking water advisory. \\label{tab:child_conmat_table}"}
+knitr::kable(child_conmat)
+```
+
+\newpage
+
+```{r who_drink_conmat_table, results='asis', echo=FALSE, tab.cap="Confusion matrix comparing chlorophyll \\textit{a} predicted exceedences (rows) versus real exceedances (columns) for the WHO drinking water advisory. \\label{tab:who_drink_conmat_table}"}
+knitr::kable(who_drink_conmat)
+```
+
+\newpage
+
+```{r adult_conmat_table, results='asis', echo=FALSE, tab.cap="Confusion matrix comparing chlorophyll \\textit{a} predicted exceedences (rows) versus real exceedances (columns) for the U.S. EPA adult drinking water advisory. \\label{tab:adult_conmat_table}"}
+knitr::kable(adult_conmat)
+```
+
+\newpage
+
+```{r who_rec_conmat_table, results='asis', echo=FALSE, tab.cap="Confusion matrix comparing chlorophyll \\textit{a} predicted exceedences (rows) versus real exceedances (columns) for the WHO recreational water advisory. \\label{tab:who_rec_conmat_table}"}
+knitr::kable(who_rec_conmat)
 ```
 
 \newpage
